@@ -10,39 +10,33 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.release>11</java.release>
+        <java.release>16</java.release>
         <servlet.version>4.0.1</servlet.version>
-        <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
-        <jackson.version>2.11.1</jackson.version>
-        <lombok.version>1.18.12</lombok.version>
-        <jsonpath.version>2.4.0</jsonpath.version>
-        <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
+        <hibernate.validator.version>7.0.5.Final</hibernate.validator.version>
+        <jackson.version>2.13.3</jackson.version>
+        <lombok.version>1.18.24</lombok.version>
+        <jsonpath.version>2.7.0</jsonpath.version>
         <dbunit.version>2.7.0</dbunit.version>
         <dbunit.spring.version>1.3.0</dbunit.spring.version>
-        <google.guava.version>29.0-jre</google.guava.version>
-        <h2.version>1.4.200</h2.version>
+        <google.guava.version>31.1-jre</google.guava.version>
+        <h2.version>2.1.214</h2.version>
         <javax.el.api.version>3.0.1-b06</javax.el.api.version>
-        <javax.el.version>3.0.1-b11</javax.el.version>
-        <spring.fox.version>3.0.0</spring.fox.version>
-        <jaxb.api.version>2.3.1</jaxb.api.version>
-        <hibernate.search.orm.version>5.11.5.Final</hibernate.search.orm.version>
+        <javax.el.version>3.0.1-b12</javax.el.version>
+        <jaxb.api.version>2.4.0-b180830.0359</jaxb.api.version>
+        <hibernate.search.orm.version>5.11.10.Final</hibernate.search.orm.version>
         <hamcrest.all.version>1.3</hamcrest.all.version>
-        <postgresql.version>42.2.14</postgresql.version>
-        <validation.api>2.0.1.Final</validation.api>
+        <postgresql.version>42.4.2</postgresql.version>
+        <jakarta.validation.api>2.0.2</jakarta.validation.api>
+        <springdoc.openapi.ui>1.6.11</springdoc.openapi.ui>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>2.7.3</version>
     </parent>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-indexer</artifactId>
-            <optional>true</optional>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -173,9 +167,9 @@
             <version>${jackson.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>${validation.api}</version>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>${jakarta.validation.api}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
@@ -189,13 +183,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -204,6 +191,26 @@
                     <excludes>
                         <exclude>**/AppGcpConfig.java</exclude>
                     </excludes>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
             </plugin>
         </plugins>
@@ -216,20 +223,30 @@
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>io.springfox</groupId>
-                    <artifactId>springfox-boot-starter</artifactId>
-                    <version>${spring.fox.version}</version>
+                    <groupId>org.springdoc</groupId>
+                    <artifactId>springdoc-openapi-ui</artifactId>
+                    <version>${springdoc.openapi.ui}</version>
                 </dependency>
             </dependencies>
         </profile>
         <profile>
             <id>gcp</id>
-
+            <dependencyManagement>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.springframework.cloud</groupId>
+                        <artifactId>spring-cloud-gcp-dependencies</artifactId>
+                        <version>1.2.7.RELEASE</version>
+                        <type>pom</type>
+                        <scope>import</scope>
+                    </dependency>
+                </dependencies>
+            </dependencyManagement>
             <dependencies>
                 <dependency>
-                    <groupId>org.springframework.cloud</groupId>
-                    <artifactId>spring-cloud-gcp-starter</artifactId>
-                    <version>1.2.3.RELEASE</version>
+                    <groupId>org.springframework</groupId>
+                    <artifactId>spring-context-indexer</artifactId>
+                    <optional>true</optional>
                 </dependency>
                 <dependency>
                     <groupId>com.h2database</groupId>
@@ -239,12 +256,6 @@
                 <dependency>
                     <groupId>org.springframework.cloud</groupId>
                     <artifactId>spring-cloud-gcp-starter-sql-postgresql</artifactId>
-                    <version>1.2.4.RELEASE</version>
-                </dependency>
-                <dependency>
-                    <groupId>com.google.cloud.sql</groupId>
-                    <artifactId>postgres-socket-factory</artifactId>
-                    <version>1.0.16</version>
                 </dependency>
             </dependencies>
             <build>
@@ -263,7 +274,7 @@
                     <plugin>
                         <groupId>com.google.cloud.tools</groupId>
                         <artifactId>appengine-maven-plugin</artifactId>
-                        <version>2.3.0</version>
+                        <version>2.4.0</version>
                         <configuration>
                             <deploy.projectId>sepomex-api</deploy.projectId>
                             <deploy.version>3</deploy.version>
